# ghostpost-backend

./: db.sqlite3  pyproject.toml
backend_app/: admin.py  models.py  serializers.py  views.py
backend_app/migrations/: 0001_initial.py  0002_auto_20201005_0235.py
ghostpost_backend/: settings.py  urls.py
