[tool.poetry]
name = "drf_react_ghostpost_backend"
version = "0.1.0"
description = ""
authors = ["Justin_Phillips <dcoltwinchester1967@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
